samples/_failures_safe/1761074683_0ebb97_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a2bd86cb.c: In function ‘main’:
./samples/SAFE/__tmp_a2bd86cb.c:158:5: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  158 |     mat
      |     ^~~
      |     mat2
./samples/SAFE/__tmp_a2bd86cb.c:158:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a2bd86cb.c:158:8: error: expected ‘;’ at end of input
  158 |     mat
      |        ^
      |        ;
./samples/SAFE/__tmp_a2bd86cb.c:158:5: error: expected declaration or statement at end of input
  158 |     mat
      |     ^~~
